--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://kalpana2025-ux.github.io/react-calculator",
+  "homepage": "https://kalpana2025-ux.github.io/calculator",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,4 +44,3 @@
     "gh-pages": "^6.3.0"
   }
 }
-
